chore: small refactoring